button, tilt, publish
- fixed button mapping
- kill button
- changed speeds of tilt and pan
- tilt to 90 during pan adjust
- fix set speed
- publisher stuff in tilt
- kill feedforward, fix feeback

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
     "**/*~": true
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib",
-  "wpilib.skipSelectSimulateExtension": true
+  "wpilib.skipSelectSimulateExtension": true,
+  "files.associations": {
+    "*.inc": "cpp"
+  }
 }
